--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ compiler/compiler
 simulator/generated/**
 simulator/*.o
 simulator.exe
+
+benchmark/venv
+benchmark/genn-5.1.0
+benchmark/genn-5.1.0.tar.gz
