Add NEST-GPU to the benchmarks

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -52,7 +52,7 @@ ENV C_INCLUDE_PATH="$C_INCLUDE_PATH:/usr/local/cuda/include"
 
 ENV CUDA_PATH="/usr/local/cuda"
 
-# Install prerequisites of GeNN
+# Install Python and Virtual Environment
 
 RUN dnf install libffi libffi-devel -y
 
@@ -70,7 +70,7 @@ COPY ./requirements.txt ./
 
 RUN pip3 install -r requirements.txt
 
-# Install genn-5.1.0
+# Install GeNN 5.1.0
 
 RUN wget https://github.com/genn-team/genn/archive/refs/tags/5.1.0.tar.gz -O genn-5.1.0.tar.gz
 
@@ -83,4 +83,62 @@ RUN python3 setup.py develop
 # Install prerequisites of cuSpike
 
 RUN dnf install bison flex -y
+
+# Install NEST-GPU
+
+WORKDIR /opt
+
+RUN wget https://download.open-mpi.org/release/open-mpi/v5.0/openmpi-5.0.7.tar.bz2
+
+RUN tar -xvf openmpi-5.0.7.tar.bz2
+
+RUN mkdir openmpi-5.0.7-bin
+
+WORKDIR /opt/openmpi-5.0.7
+
+RUN ./configure --prefix=/opt/openmpi-5.0.7-bin
+
+RUN make -j$(nproc)
+
+RUN make install
+
+ENV OPENMPI_BINDIR=/opt/openmpi-5.0.7-bin/bin
+
+ENV OPENMPI_SBINDIR=/opt/openmpi-5.0.7-bin/sbin
+
+ENV OPENMPI_INCDIR=/opt/openmpi-5.0.7-bin/include
+
+ENV OPENMPI_LIBDIR=/opt/openmpi-5.0.7-bin/lib
+
+ENV PATH="$OPENMPI_BINDIR:$OPENMPI_SBINDIR:$PATH"
+
+ENV LD_LIBRARY_PATH="$OPENMPI_LIBDIR:$LD_LIBRARY_PATH"
+
+ENV LDFLAGS="$LDFLAGS -Wl,-rpath -Wl,$OPENMPI_LIBDIR"
+
+ENV CFLAGS="$CFLAGS -I$OPENMPI_INCDIR -L$OPENMPI_LIBDIR"
+
+ENV CXXFLAGS="$CXXFLAGS -I$OPENMPI_INCDIR -L$OPENMPI_LIBDIR"
+
+ENV PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$OPENMPI_LIBDIR/pkgconfig"
+
+RUN pip3 install mpi4py
+
+WORKDIR /opt
+
+RUN git clone https://github.com/nest/nest-gpu.git
+
+RUN mkdir nest-gpu-bin
+
+WORKDIR /opt/nest-gpu
+
+RUN cmake -DCMAKE_INSTALL_PREFIX:PATH=/opt/nest-gpu-bin .
+
+RUN make -j$(nproc)
+
+RUN make install
+
+ENV PYTHONPATH="/opt/nest-gpu-bin/lib64/python3.12/site-packages${PYTHONPATH:+:$PYTHONPATH}"
+
+ENV NESTGPU_LIB="/opt/nest-gpu-bin/lib64/nestgpu/libnestgpukernel.so"
 
