--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,17 @@ benchmark/cuba/output
 benchmark/cuba/__pycache__
 benchmark/cuba/*.png
 benchmark/cuba/*.txt
+
+benchmark/cobahh/cobahh_CODE
+benchmark/cobahh/output
+benchmark/cobahh/__pycache__
+benchmark/cobahh/*.png
+benchmark/cobahh/*.txt
+
 *.txt
 
 !benchmark/cuba/cuba-elapsedtime-excluding-compilation.png
 !benchmark/cuba/cuba-elapsedtime-including-compilation.png
+
+!benchmark/cobahh/cobahh-elapsedtime-including-compilation.png
+!benchmark/cobahh/cobahh-elapsedtime-excluding-compilation.png
