--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -145,3 +145,7 @@ ENV NESTGPU_LIB="/opt/nest-gpu-bin/lib64/nestgpu/libnestgpukernel.so"
 # Install Brian2Cuda
 
 RUN pip3 install brian2==2.7.1 brian2cuda==1.0a6
+
+# Allow regular user within distrobox to install to /venv
+
+RUN chmod -R 777 /venv
