Fix problem with RPMFusion repo

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,17 +14,10 @@ RUN dnf install wget bzip2 unzip diffutils -y
 
 # Install NVIDIA Drivers
 
-RUN dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm -y
+RUN dnf install --nogpgcheck https://dl.fedoraproject.org/pub/epel/epel-release-latest-$(rpm -E %rhel).noarch.rpm -y
 
-RUN dnf install https://dl.fedoraproject.org/pub/epel/epel-next-release-latest-9.noarch.rpm -y
-
-RUN dnf install --nogpgcheck https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-$(rpm -E %rhel).noarch.rpm -y
-
-RUN dnf install https://mirrors.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-$(rpm -E %rhel).noarch.rpm -y
-
-RUN dnf config-manager --set-enabled rpmfusion-free-updates-testing -y
-
-RUN dnf config-manager --set-enabled rpmfusion-nonfree-updates-testing -y
+RUN dnf install --nogpgcheck https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-$(rpm -E %rhel).noarch.rpm \
+    https://mirrors.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-$(rpm -E %rhel).noarch.rpm -y
 
 RUN dnf install xorg-x11-drv-nvidia-cuda -y
 
